--- a/home-project/production-workflow/WebApp/Views/CustomersUsers/Create.cshtml
+++ b/home-project/production-workflow/WebApp/Views/CustomersUsers/Create.cshtml
@@ -1,4 +1,4 @@
-@model App.Domain.CustomersUsers
+@model WebApp.ViewModels.CustomersUsersCreateEditViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,12 +13,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class ="form-control" asp-items="ViewBag.CustomerId"></select>
+                <label asp-for="CustomersUsers.CustomerId" class="control-label"></label>
+                <select asp-for="CustomersUsers.CustomerId" class ="form-control" asp-items="ViewBag.CustomerId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+                <label asp-for="CustomersUsers.UserId" class="control-label"></label>
+                <select asp-for="CustomersUsers.UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
