--- a/home-project/production-workflow/WebApp/Views/OperationMappings/Edit.cshtml
+++ b/home-project/production-workflow/WebApp/Views/OperationMappings/Edit.cshtml
@@ -1,4 +1,4 @@
-@model App.Domain.OperationMapping
+@model OperationMappingCreateEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,31 +13,31 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ProcessingStepId" class="control-label"></label>
-                <select asp-for="ProcessingStepId" class="form-control" asp-items="ViewBag.ProcessingStepId"></select>
-                <span asp-validation-for="ProcessingStepId" class="text-danger"></span>
+                <label asp-for="OperationMapping.ProcessingStepId" class="control-label"></label>
+                <select asp-for="OperationMapping.ProcessingStepId" class="form-control" asp-items="ViewBag.ProcessingStepId"></select>
+                <span asp-validation-for="OperationMapping.ProcessingStepId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="OrderId" class="control-label"></label>
-                <select asp-for="OrderId" class="form-control" asp-items="ViewBag.OrderId"></select>
-                <span asp-validation-for="OrderId" class="text-danger"></span>
+                <label asp-for="OperationMapping.OrderId" class="control-label"></label>
+                <select asp-for="OperationMapping.OrderId" class="form-control" asp-items="ViewBag.OrderId"></select>
+                <span asp-validation-for="OperationMapping.OrderId" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="PrerequisitesObtained" /> @Html.DisplayNameFor(model => model.PrerequisitesObtained)
+                    <input class="form-check-input" asp-for="OperationMapping.PrerequisitesObtained" /> @Html.DisplayNameFor(model => model.OperationMapping.PrerequisitesObtained)
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="CompletedAt" class="control-label"></label>
-                <input asp-for="CompletedAt" class="form-control" />
-                <span asp-validation-for="CompletedAt" class="text-danger"></span>
+                <label asp-for="OperationMapping.CompletedAt" class="control-label"></label>
+                <input asp-for="OperationMapping.CompletedAt" class="form-control" />
+                <span asp-validation-for="OperationMapping.CompletedAt" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Details" class="control-label"></label>
-                <input asp-for="Details" class="form-control" />
-                <span asp-validation-for="Details" class="text-danger"></span>
+                <label asp-for="OperationMapping.Details" class="control-label"></label>
+                <input asp-for="OperationMapping.Details" class="form-control" />
+                <span asp-validation-for="OperationMapping.Details" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="OperationMapping.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
