controllers and apicontrollers using DTOs

--- a/home-project/production-workflow/WebApp/Views/CustomersUsers/Index.cshtml
+++ b/home-project/production-workflow/WebApp/Views/CustomersUsers/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<App.Domain.CustomersUsers>
+@model IEnumerable<App.DAL.DTO.CustomersUsersDto>
 
 @{
     ViewData["Title"] = "Index";
