--- a/home-project/production-workflow/WebApp/Views/OperationMappings/Index.cshtml
+++ b/home-project/production-workflow/WebApp/Views/OperationMappings/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<App.Domain.OperationMapping>
+@model IEnumerable<App.DAL.DTO.OperationMappingDto>
 
 @{
     ViewData["Title"] = "Index";
