--- a/home-project/production-workflow/WebApp/Views/ProcessingSteps/Index.cshtml
+++ b/home-project/production-workflow/WebApp/Views/ProcessingSteps/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<App.Domain.ProcessingStep>
+@model IEnumerable<App.DAL.DTO.ProcessingStepDto>
 
 @{
     ViewData["Title"] = "Index";
