--- a/home-project/production-workflow/WebApp/Views/CustomersUsers/Create.cshtml
+++ b/home-project/production-workflow/WebApp/Views/CustomersUsers/Create.cshtml
@@ -16,10 +16,10 @@
                 <label asp-for="CustomersUsers.CustomerId" class="control-label"></label>
                 <select asp-for="CustomersUsers.CustomerId" class ="form-control" asp-items="ViewBag.CustomerId"></select>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="CustomersUsers.UserId" class="control-label"></label>
                 <select asp-for="CustomersUsers.UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
