--- a/home-project/production-workflow/WebApp/Views/CustomersUsers/Delete.cshtml
+++ b/home-project/production-workflow/WebApp/Views/CustomersUsers/Delete.cshtml
@@ -17,12 +17,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Customer!.Address)
         </dd>
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.User)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.User!.Id)
-        </dd>
+        </dd>*@
     </dl>
     
     <form asp-action="Delete">
